[package]
name = "wg-client"
version = "0.1.0"
authors = ["optman <optman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun ={version="*", git="https://github.com/cloudflare/boringtun"}
slog="*"
slog-term="*"
clap="*"
tokio={version="*", features=["full"]}
tun={version="*", features=["async"]}
nix="*"
daemonize="*"
ipnet="*"
